--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,5 +19,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://kit.fontawesome.com/8c484be4ce.js" crossorigin="anonymous"></script>
   </body>
 </html>
